[gd_scene load_steps=4 format=3 uid="uid://editor_toolbox_001"]

[ext_resource type="Script" uid="uid://editor_toolbox_script_001" path="res://Scripts/Editor/editor_toolbox.gd" id="1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_tools"]

[sub_resource type="ButtonGroup" id="ButtonGroup_notes"]

[node name="EditorToolbox" type="PanelContainer"]
custom_minimum_size = Vector2(80, 0)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ToolsLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "TOOLS"
horizontal_alignment = 1

[node name="CursorButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tools")
text = "üñ±Ô∏è"
tooltip_text = "Select Tool (Q)"

[node name="NoteButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_tools")
text = "‚ô™"
tooltip_text = "Note Placement Tool (W)"

[node name="EraseButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tools")
text = "üóëÔ∏è"
tooltip_text = "Erase Tool (E)"

[node name="BPMButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tools")
text = "‚ô©"
tooltip_text = "BPM Marker Tool (R)"

[node name="SectionButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tools")
text = "üìè"
tooltip_text = "Section Tool (T)"

[node name="EventButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_tools")
text = "‚ö°"
tooltip_text = "Event Tool (Y)"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="NoteTypesLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "NOTE TYPE"
horizontal_alignment = 1

[node name="RegularButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_notes")
text = "‚óè"
tooltip_text = "Regular Note (1)"

[node name="HOPOButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_notes")
text = "‚óê"
tooltip_text = "Hammer-On/Pull-Off (2)"

[node name="TapButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_notes")
text = "‚óé"
tooltip_text = "Tap Note (3)"

[node name="OpenButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_notes")
text = "‚óã"
tooltip_text = "Open Note (4)"

[node name="StarPowerButton" type="Button" parent="VBox"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_notes")
text = "‚òÖ"
tooltip_text = "Star Power (5)"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="SustainLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "SUSTAIN"
horizontal_alignment = 1

[node name="SustainButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Hold"
tooltip_text = "Hold to place sustain notes"
